Bug #121011. widget misses mouse-up event after scrolling when mouse button is released outside the widget area.  Track passive grabs with sButtonMotionTarget. r=bryner, sr=shaver